--- a/app/src/main/res/layout/left_column_layout.xml
+++ b/app/src/main/res/layout/left_column_layout.xml
@@ -18,7 +18,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorTextPrimary"
+    android:backgroundTint="@color/colorTextPrimary">
 
   <FrameLayout
       android:id="@+id/left_column"
@@ -38,10 +40,10 @@
       android:id="@+id/right_column"
       android:layout_width="0dp"
       android:layout_height="0dp"
-      android:layout_marginTop="@dimen/glass_card_two_column_margin"
       android:layout_marginStart="@dimen/glass_card_two_column_margin"
-      android:layout_marginBottom="@dimen/glass_card_two_column_margin"
+      android:layout_marginTop="@dimen/glass_card_two_column_margin"
       android:layout_marginEnd="@dimen/glass_card_margin"
+      android:layout_marginBottom="@dimen/glass_card_two_column_margin"
       app:layout_constraintBottom_toTopOf="@id/footer"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@id/left_column"
