--- a/app/src/main/res/layout/view_pager_layout.xml
+++ b/app/src/main/res/layout/view_pager_layout.xml
@@ -33,6 +33,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="4dp"
+      android:backgroundTint="@android:color/transparent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
